--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "dependencies": {
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-native": "^0.57.3",
+    "react-router": "",
+    "react-router-dom": "^4.3.1",
+    "react-router-native": "^4.3.0",
     "react-scripts": "2.0.5"
   },
   "scripts": {
